knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Template_Section__c/pqcrush__Template_Section__c.object-meta.xml
<CustomObject>
    <label>Template Section</label>
    <nameField>
        <label>Template Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>