knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Template_Section__c/fields/pqcrush__Component_Index__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Component_Index__c</fullName>
    <label>Component Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>