knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Template_Section__c/fields/pqcrush__Component_Label__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Component_Label__c</fullName>
    <label>Component Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>