knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Template_Section__c/fields/pqcrush__Is_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Is_Related_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Related Object</label>
    <type>Checkbox</type>
</CustomField>