knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Template_Section__c/fields/pqcrush__Template__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>pqcrush__Account_Plan_Template__c</referenceTo>
    <relationshipLabel>Template Sections</relationshipLabel>
    <relationshipName>Template_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>